start smui & create tabbar

--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,4 @@
-
-html {
-	background-color: black;
+html, body {
+	background-color: #263238;
 	color: white;
-} 
-
-body {
-	background-color: 
 }
