--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -4,6 +4,7 @@
 
 $primary: color-palette.$teal-a200;
 
+
 // Svelte Colors!
 @use '@material/theme/index' as theme with (
   $primary: $primary,
@@ -27,3 +28,16 @@ body {
 .mdc-tab-bar {
 	background-color: black;
 }
+
+// FORM --------------------
+
+form {
+	background-color: color-palette.$blue-grey-800;
+	padding: 30px;
+	margin: 5px auto;
+	max-width: 95%;
+	display: flex;
+	flex-direction: column;
+	border-radius: 10px;
+}
+
