work on activities structure

--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -47,7 +47,7 @@ body {
 
 // FORM --------------------
 
-form {
+form, .form-like{
 	background-color: $darker-blue-grey;
 	padding: 30px;
 	margin: 5px auto;
