--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -63,7 +63,7 @@ form .mdc-button {
 
 fieldset {
 	border-radius: 10px;
-	border-color: $primary;
+	//border-color: $primary;
 	padding: 20px;
 	margin: 5px;
 }
@@ -71,7 +71,7 @@ fieldset {
 legend {
 	border-radius: 5px;
 	padding: 5px;
-	color: $primary;
+	//color: $primary;
 }
 
 input[type="checkbox"]{
