--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -111,15 +111,25 @@ input[type="checkbox"]{
 	border-radius: 1px;
 }
 
+/*
 .mdc-touch-target-wrapper {
 	padding: 5px;
 	background: black;
 	border-radius: 10px;
 }
+*/
 
-.activities-container .mdc-text-field {
-	height: 30px;
+.activity-box {
+	padding: 10px;
+	background: black;
+	border-radius: 30px;
+	margin: 5px;
 }
+
+.activities-container{
+	display: flex;
+}
+
 
 // CHIPS -----------
 
@@ -127,7 +137,7 @@ form .mdc-chip {
 	background-color: transparent;
 	height: auto;
 	border-radius: 50px;
-	padding: 5px;
+	//padding: 5px;
 	//--mdc-theme-primary: transparent;
 	--mdc-theme-surface: transparent;
 }
