--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -43,6 +43,45 @@ body {
 	background: black;
 }
 
+// HEADER
+
+.jersey-25-regular {
+	font-family: "Jersey 25", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.roboto-serif {
+	font-family: "Roboto Serif", serif;
+	font-optical-sizing: auto;
+	letter-spacing: 1px;
+}
+
+header {
+	text-align: center;
+	padding: 10px;
+	//background-color: black;
+}
+
+header h1 {
+	margin: 0;
+	color: $primary;
+	text-shadow: 2px 2px black;
+}
+
+.centered {
+	text-align: center;
+}
+
+.subheading {
+	margin-bottom: 10px;
+}
+
+h2.main  {
+	margin-left: 10px;
+}
+
+
 // SMALL BUTTONS ----------
 
 .simple-button {
@@ -69,15 +108,6 @@ button.red {
 
 
 // MOBILE (default) STYLES
-
-header {
-	text-align: center;
-	margin: 16px;
-}
-
-.centered {
-	text-align: center;
-}
 
 // FORM --------------------
 
@@ -142,28 +172,32 @@ form .mdc-chip {
 
 // DIARY STYLES ----------------------
 
-h2.mood {
+h3.mood {
 	color: white;
 	text-transform: capitalize;
+	margin: 10px;
+	font-size: 130%;
 }
 
 .diary-date {
 	color: $primary-light;
 	margin-bottom: 0;
+	margin-top: 5px;
+	margin-left: 10px;
 }
 
 .diary-page .entry {
-	background-color: black;
-	padding: 10px;
-	margin: 5px;
+	background-color: color-palette.$teal-800;
+	padding: 5px 7px;
+	margin: 3px 5px 3px 0;
 	border-radius: 20px;
 }
 
 .diary-page {
 	background-color: $darker-blue-grey;
 	border-radius: 10px;
-	padding: 20px;
-	margin: 5px;
+	padding: 20px 7px;
+	margin: 10px 2px;
 }
 
 .entries-container {
@@ -407,15 +441,17 @@ fieldset h4 {
 	h2.mood {
 		color: white;
 		text-transform: capitalize;
+		margin: 10px 0;
 	}
 
 	.diary-date {
 		color: $primary-light;
+		margin-top: 5px;
 		margin-bottom: 0;
 	}
 
 	.diary-page .entry {
-		background-color: black;
+		background-color: color-palette.$teal-800;
 		padding: 10px;
 		margin: 5px;
 		border-radius: 20px;
